--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,4 +48,5 @@ vita_create_vpk(${SHORT_NAME}.vpk ${VITA_TITLEID} ${SHORT_NAME}.self
   NAME ${VITA_APP_NAME}
   FILE ${CMAKE_BINARY_DIR}/plugin/yamt_360.skprx yamt_360.skprx
   FILE ${CMAKE_BINARY_DIR}/plugin/yamt_365.skprx yamt_365.skprx
+  FILE ${CMAKE_BINARY_DIR}/plugin/yamt.suprx yamt.suprx
 )
