--- a/plugin/kernel/yamt.yml
+++ b/plugin/kernel/yamt.yml
@@ -1,8 +1,21 @@
 yamtKernel:
   attributes: 0
   version:
-    major: 1
-    minor: 2
+    major: 2
+    minor: 0
   main:
     start: module_start
     stop: module_stop
+  modules:
+    uyamt:
+      syscall: true
+      functions:
+        - yamtUserCmdHandler
+    kyamt:
+      functions:
+        - yamtMount
+        - yamtGetDevice
+        - yamtGetModOff
+        - yamtGetCDevID
+        - yamtInject
+        - yamtCheckGPO
